# anaya

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  anaya.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.json  tailwind.config.ts
.github/workflows/: ci.yml  publish.yml
anaya/: __init__.py  config.py
anaya/api/: __init__.py  app.py  github.py  health.py  security.py  webhooks.py
anaya/cli/: main.py
anaya/engine/: __init__.py  git_utils.py  models.py  orchestrator.py  repo_config.py  rule_loader.py
anaya/engine/scanners/: __init__.py  ast_scanner.py  base.py  pattern.py
anaya/llm/: __init__.py  judge.py  prompts.py
anaya/packs/generic/: audit-logging.yml  owasp-top10.yml  pii-handling.yml  secrets-detection.yml  tls-encryption.yml
anaya/packs/india/: dpdp-privacy.yml  rbi-data-security.yml
anaya/reporter/: audit_json.py  check_run.py  json_report.py  pr_comment.py  sarif.py  table.py
anaya/worker/: __init__.py  pr_scan.py  tasks.py
cli/: __init__.py  main.py
docs/: AZURE_VM_DEPLOYMENT.md  GITHUB_ACTION.md  GITHUB_APP.md  IMPLEMENTATION_PLAN.md  LLM_RULES.md  MANUAL_CHECKS.md  PACK_AUTHORING.md  PYPI_RELEASE.md  RAILWAY_DEPLOYMENT.md  REPOSITORY_STRATEGY.md  SECURITY_ROTATION.md  TECHNICAL_ARCHITECTURE.md  blueprint.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/subscribe/: actions.ts  page.tsx
src/components/: FeatureSection.tsx  WishlistButton.tsx  WishlistOutlineButton.tsx  calendly.tsx  contact.tsx
src/components/landing/: benefits.tsx  chat.tsx  cta.tsx  data-extraction.tsx  demo.tsx  early-access-dialog.tsx  faq.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  logo.tsx  navbar.tsx  summarization.tsx
src/components/ui/: accordion.tsx
src/hooks/: use-currency.ts
src/lib/: firebase.ts
tests/: test_api_github.py  test_api_security.py  test_api_webhooks.py  test_ast_scanner.py  test_cli.py  test_config.py  test_external_packs.py  test_generic_packs.py  test_git_utils.py  test_india_dpdp_pack.py  test_india_rbi_pack.py  test_llm_judge.py  test_orchestrator.py  test_pattern_scanner.py  test_repo_config.py  test_reporters.py  test_rule_loader.py  test_worker_pr_scan.py
tests/fixtures/javascript/clean/: security_matrix.js
tests/fixtures/javascript/dirty/: security_matrix.js
tests/fixtures/python/clean/: audited_flows.py  proper_secrets.py  security_matrix.py
tests/fixtures/python/dirty/: appsec_and_pii.py  hardcoded_secret.py  missing_audit.py  security_matrix.py
tests/fixtures/python/edge/: suppressions.py
