[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anaya"
version = "0.1.0"
description = "Policy-as-code engine for compliance scanning"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "typer>=0.12.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.7.0",
]

[project.scripts]
anaya = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["anaya*", "cli*"]

[tool.setuptools.package-data]
anaya = ["packs/**/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"
