[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anaya"
version = "0.1.0"
description = "Policy-as-code engine for compliance scanning"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "pydantic-settings>=2.5.0",
  "PyYAML>=6.0",
  "typer>=0.12.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.7.0",
]

[project.scripts]
anaya = "anaya.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["anaya*"]

[tool.setuptools.package-data]
anaya = ["packs/**/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["anaya"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
