[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anaya"
version = "2.0.0"
description = "Policy-as-code engine and OSS CLI for compliance scanning"
requires-python = ">=3.11"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Anaya contributors" },
]
keywords = ["compliance", "policy-as-code", "security", "privacy", "cli", "github-app"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "PyJWT[crypto]>=2.9.0",
  "pydantic-settings>=2.5.0",
  "PyYAML>=6.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0.0",
]
dev = [
  "jsonschema>=4.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.7.0",
]

[project.scripts]
anaya = "anaya.cli.main:app"

[project.urls]
Homepage = "https://github.com/sandip-pathe/anaya"
Repository = "https://github.com/sandip-pathe/anaya"
Issues = "https://github.com/sandip-pathe/anaya/issues"
Documentation = "https://github.com/sandip-pathe/anaya#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["anaya*"]

[tool.setuptools.package-data]
anaya = ["packs/**/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["anaya"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
